# lesson_app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  cli.py  diagnose.py  index.html  main.py  pyproject.toml  requirements.txt  server.py  test_api.py  一键启动教案生成器.bat
.streamlit/: config.toml
examples/: 迎春花教案样例.docx
generator/: __init__.py  ai_utils.py  excel_export.py  formatter.py  key_store.py  models.py  pdf_export.py  template.py
