[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lesson_app"
version = "1.0.0"
description = "AI 美术教案生成器 — 上传图片，自动生成排版规范的教案文档"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["education", "ai", "lesson-plan", "art-education"]

authors = [
    {name = "郑书豪"},
]

dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "fpdf2>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/Ddlandyelv/lesson_app"
Source = "https://github.com/Ddlandyelv/lesson_app"

[scripts]
lesson-app = "generator.cli:main"

[tool.setuptools.packages.find]
include = ["generator*"]
